# MoneyPrinterTurbo-main--3-

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .env.example  .env.template  .gitignore  CLEANUP_COMPLETED.md  CLEANUP_SUMMARY.md  CONFIG_AGGREGATION_SUMMARY.md  CUSTOM_CHANGES.md  DEBUG_CRITICAL_ISSUES.md  Dockerfile  FILE_ANALYSIS_REPORT.md  MoneyPrinterTurbo.code-workspace  PLANNING.md  PROGRESS.sql  README_WORKFLOW_EXECUTE.md  SECURITY_REMEDIATION_REPORT.md  SECURITY_SETUP_GUIDE.md  TODO.md  TTS_IMPLEMENTATION_COMPLETE.md  WORKFLOW_VALIDATION_README.md  activate.sh  analyze_repository.sh  claude_cli.py  cleanup_repository.sh  config.example.toml  config.mcp.example.toml  credentials.env  deploy-northflank.sh  deploy_and_check.sh  deploy_and_verify.sh  dev_start.sh  dev_test.sh  docker-compose.yml  docker-setup-guide.md  health_check.sh  main.py  moneyprinterturbo.desktop  northflank-deploy.yaml  (+22 more)
app/: Dockerfile  MIGRATION_SUMMARY.md  Main.py  build.py  config.toml  docker-compose.yml  main.py  pyproject.toml  requirements-py313.txt  requirements-updated.txt  requirements.txt  router.py  run_mcp_server.py  setup_and_test.sh  start_api.sh  start_mcp_server.sh
app/config/: config.example.toml  config.py  optimized_config_loader.py  redis_config.py
app/controllers/: tts_controller.py
app/database/: __init__.py  connection.py  connection_fix.py  migrations.py  models.py
app/database_migrations/: __init__.py  migration_manager.py  migrations.py
app/deployment/: modal_deployment.py
app/embed/: nomic_embed.py
app/mcp/: README.md  __init__.py  (+10 more)
(+292 files in other folders)
