[project]
name = "moneyprinterturbo"
version = "2.0.0"
description = "MoneyPrinterTurbo - Advanced AI Video Generation API"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.0.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv.workspace]
members = [
    "mcp",
]
