[project]
name = "mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "fastapi[standard]",
    "uvicorn",
    "httpx",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "g4f",
    "loguru",
    "openai",
    "toml"
]
